# rudof-shacl-benchmarks

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Taskfile.yml  default_config.toml  low_resources.toml  new_config_file.toml  qlever_config.toml
benches/: era_bench.rs  icdd_bench.rs  lubm_bench.rs  validator_benchmark.rs
benches/common/: criterion.rs  flamegraph.rs  mod.rs  rudof.rs
common/src/: config.rs  lib.rs  rdf_format.rs  rudof.rs
data/: Taskfile.yml  era_entrypoint.sh  icdd_entrypoint.sh  lubm_entrypoint.sh
data/utils/: .gitignore  lubm-shapes.ttl  run.sh  shaper.py  spinner.sh  test-core-shapes.ttl
data/utils/patch/: era.py  icdd.py  main.py
data/utils/test/: data-conforms.ttl  data-no-conforms.ttl  run.sh  test-sparql-shapes.ttl
engines/: Dockerfile_kt  Dockerfile_py_static  Dockerfile_python  Dockerfile_rust  Taskfile.yml  docker-bake.hcl  qlever_config.toml
engines/corese/: build.gradle.kts  settings.gradle.kts
engines/corese/gradle/: libs.versions.toml
engines/corese/gradle/wrapper/: gradle-wrapper.properties
engines/jena/: build.gradle.kts  settings.gradle.kts
engines/jena/gradle/: libs.versions.toml
engines/jena/gradle/wrapper/: gradle-wrapper.properties
engines/maplib/: .gitignore  benchmark_runner.py  engine.py  main.py  pyproject.toml  results.py
engines/pyshacl/: Dockerfile  args.py  engine.py  main.py  pyproject.toml  validation_engine.py
engines/rdf4j/: build.gradle.kts  settings.gradle.kts
engines/rdf4j/gradle/: libs.versions.toml
engines/rdf4j/gradle/wrapper/: gradle-wrapper.properties
engines/rdfunit/: build.gradle.kts  settings.gradle.kts
engines/rdfunit/gradle/: libs.versions.toml
engines/rdfunit/gradle/wrapper/: gradle-wrapper.properties
engines/rudof_0_1/: Cargo.toml
engines/rudof_0_1/src/: main.rs
engines/rudof_0_2/: Cargo.toml
engines/rudof_0_2/src/: main.rs
engines/rudof_qlever/: Cargo.toml  Dockerfile
engines/rudof_qlever/src/: main.rs
engines/rudof_v1/: Cargo.toml
engines/rudof_v1/src/: args.rs  benchmark_runner.rs  engine.rs  main.rs  validation_engine.rs
engines/rudof_v2/: Cargo.toml  Dockerfile_qlever
engines/rudof_v2/src/: args.rs  benchmark_runner.rs  engine.rs  main.rs  results.rs
engines/topbraid/: build.gradle.kts  settings.gradle.kts
engines/topbraid/gradle/: libs.versions.toml
engines/topbraid/gradle/wrapper/: gradle-wrapper.properties
results/generator/: generate_tables.py  main.py  pyproject.toml
results/iswc-2026/criterion/: README.md
results/iswc-2026/criterion/report/: index.html
results/iswc-2026/engines/: README.md  report.json
results/iswc-2026/engines/era/: corese-era-core.json  corese-era-era.json  corese-es-core.json  jena-es-core.json  jena-es-era.json  (+34 more)
rudof_qlever/: Cargo.toml
rudof_qlever/src/: lib.rs  rudof.rs
rudof_v1/: Cargo.toml
rudof_v1/src/: lib.rs  rdf_format.rs  rudof.rs
rudof_v2/: Cargo.toml
rudof_v2/src/: lib.rs  rdf_format.rs  rudof.rs  rudof_qlever.rs
runner/: Cargo.toml
runner/benches/: era.rs  icdd.rs  lubm.rs
runner/benches/common/: config.rs  criterion.rs  flamegraph.rs  mod.rs
taskfiles/: vars.yml
tasks/: bench.yml  dataset.yml  engines.yml  utils.yml
toolchains/: Dockerfile  Taskfile.yml  docker-bake.hcl
toolchains/dataset/: Dockerfile  flake.nix
toolchains/dotnet/: flake.nix
toolchains/kotlin/: flake.nix
toolchains/python/: flake.nix
toolchains/rust/: Dockerfile  flake.nix
(+620 files in other folders)
