[workspace.package]
name = "rudof_benches_shacl_benchmarks"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "common",
    "rudof_v1",
    "rudof_v2",
    "runner"
]

default-members = [ "runner" ]
exclude = [ "engines/rudof_v1", "engines/rudof_v2", "engines/rudof_qlever" ]

[workspace.dependencies]
common = { version = "0.1.0", path = "./common" }
rudof_v1 = { version = "0.1.0", path = "./rudof_v1" }
rudof_v2 = { version = "0.1.0", path = "./rudof_v2" }
runner = { version = "0.1.0", path = "./runner" }

criterion = { version = "0.8.2", features = [ "csv_output", "html_reports" ] }
pprof = { version = "0.15.0", features = [ "flamegraph" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
toml = "1.1.2"
