[package]
name = "rudof_v2"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true

rudof = { package = "rudof_lib", git = "https://github.com/rudof-project/rudof.git", rev = "8c4a166a91dcc89beeee82cdd7ef5a93b1f9c278", features = [ "qlever" ] } # v0.3.6
minijinja = "=2.12.0"
