[package]
name = "rudof_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
rudof = { package = "rudof_lib", git = "https://github.com/rudof-project/rudof.git", rev = "8c4a166a91dcc89beeee82cdd7ef5a93b1f9c278", features = [ "qlever", "sparql" ] } # v0.3.6
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
